ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.0
    • Affects Version/s: 2.0.1
    • Component/s: Querying
    • None
    • Environment:
      Windows, Unix
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If I execute an $all/$elemMatch on a collection for a field that is missing from a document in the collection, I get a "$all/$elemMatch needs to be applied to array" error. It can be reproduced in it's simplest form with the following:

      > db.example.insert({})
      > db.example.find({foo: { $all: [{ $elemMatch: { baz: 'Test'}}]}})
      error:

      { "$err" : "$all/$elemMatch needs to be applied to array", "code" : 13021 }

      >

      The expectation is that no error is thrown and the lack of the field is simply ignored.

            Assignee:
            Aaron Staple (Inactive)
            Reporter:
            David O'Hara
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: