SERVER-4492 with all/elemMatch query, fail match rather than assert when document field is not of the expected type